--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <section id="objective">
             <h2>Objective</h2>
             <p>
-                Chemical Engineering major from UVA with experience in the Pharmaceutical and Biotechnology industries, seeking roles in manufacturing support, process development, or R&D.
+                Chemical Engineering major from UVA with experience in the Pharmaceutical and Biotechnology industries and a focus on 
+                supporting process lines. Has worked in environments in compliance with GLP, BSL-2, and other doctrines. 
+                Takes the initiative in accomplishing tasks and is adaptable to a diverse set of teams and projects in both industry 
+                and academia. Seeking to apply my Chemical Engineering education and Biopharmaceutical intern experiences to manufacturing 
+                support, process development or R&D roles in this space where my leadership and team oriented technical and project skills 
+                can be of value.            
             </p>
         </section>
 
