--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Chao - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- links html to css -->
     
 </head>
 <body>
@@ -30,23 +30,39 @@
         <section id="experience">
             <h2>Professional Experience</h2>
             <article>
-                <h3>Merck, Elkton, Virginia</h3>
-                <p><strong>Technical Operations Intern</strong> (Jun 2024 - Present)</p>
+                <h3><strong>Merck</strong> - Elkton, Virginia</h3>
+                <p><strong><i>Technical Operations Intern</i></strong> (Jun 2024 - Present)</p>
                 <ul>
                     <li>Supported biologic vaccine and small molecule manufacturing through material characterization and root cause analysis.</li>
                     <li>Conducted risk assessment for process defects on a $240 million product release.</li>
                     <li>Developed sterilization process protocols and delivered presentations on findings.</li>
+                    <li>Operated laboratory equipment including SEM, EDS, ATR – FTIR, and microscopy</li>
                 </ul>
             </article>
             <article>
-                <h3>Sampled Smart Labs, Piscataway, New Jersey</h3>
-                <p><strong>Student Lab Technician</strong> (May 2023 – Aug 2023 & Jun 2022 – Aug 2022)</p>
+                <h3><strong>Sampled Smart Labs</strong> -  Piscataway, New Jersey</h3>
+                <p><strong><i>Student Lab Technician</i></strong> (May 2023 – Aug 2023 & Jun 2022 – Aug 2022)</p>
                 <ul>
                     <li>Expanded iPSC lines for QC assays and cryopreservation in a GMP environment.</li>
                     <li>Trained and supervised new hires in lab procedures and safety.</li>
                     <li>Maintained cell line database using LIMS and other tools.</li>
+                    <li>Learned lab skills such as cell pelleting, culturing, and as well as aseptic techniques in a BSL-2 lab</li>
                 </ul>
             </article>
+            <article>
+                <h3><strong>University of Virginia </strong>- Charlottesville, VA</h3>
+                <p><strong><i>Undergraduate Researcher</i></strong> (Sep 2022 – Present)</p>
+                <ul>
+                    <li>Created mathematical simulations of hydrogels made from peptides for Oligodendrocyte Progenitor Cell future therapy.</li>
+                    <li>Managed and conducted independent research on how peptide stereochemistry affects protein folding and intermolecular
+                        interactions.</li>
+                    <li>Regularly communicated and presented on current findings and results to team and other research groups.</li>
+                    <li>Proficiently utilized commercial molecular modeling software and high-performance computing to advance research
+                        projects, including Visual Molecular Dynamics, Avogadro, NAMD, and CHARMM</li>
+                    <li>Experience with coding languages such as Python, MATLAB, and TCL in supporting various projects</li>
+                </ul>
+            </article>
+            
         </section>
 
         <section id="education">
@@ -67,7 +83,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Kenneth Chao</p>
+        <p>2025 Kenneth Chao</p>
     </footer>
 </body>
 </html>
