--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="experience">
             <h2>Professional Experience</h2>
             <article>
-                <h3><strong>Merck</strong> - Elkton, Virginia</h3>
+                <h3><strong>Merck</strong> - Elkton, VA</h3>
                 <p><strong><i>Technical Operations Intern</i></strong> (Jun 2024 - Present)</p>
                 <ul>
                     <li>Supported biologic vaccine and small molecule manufacturing through material characterization and root cause analysis.</li>
@@ -40,7 +40,7 @@
                 </ul>
             </article>
             <article>
-                <h3><strong>Sampled Smart Labs</strong> -  Piscataway, New Jersey</h3>
+                <h3><strong>Sampled Smart Labs</strong> -  Piscataway, NJ</h3>
                 <p><strong><i>Student Lab Technician</i></strong> (May 2023 – Aug 2023 & Jun 2022 – Aug 2022)</p>
                 <ul>
                     <li>Expanded iPSC lines for QC assays and cryopreservation in a GMP environment.</li>
