--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <p><a href="https://www.linkedin.com/in/kenneth-chao-4b0102220" target="_blank">LinkedIn</a></p>
     </header>
 
+    <nav>
+        <section>
+            <h3 id="nav-text">poop</h3>
+        </section>
+    </nav>
+
     <main>
         <section id="objective">
             <h2>Objective</h2>
