--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     </header>
 
     <nav>
-        <section>
-            <h3 id="nav-text">poop</h3>
-        </section>
+        <ul>
+            
+            <li>Home</li>
+            <li>Resume</li>
+            <li>Gallery</li>
+            
+        </ul>
     </nav>
 
     <main>
