--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <li>Home</li>
             <li>Resume</li>
-            <li>Gallery</li>
+            <li><a href="gallery.html">Gallery</a></li> <!-- Links to the gallery page -->
             
         </ul>
     </nav>
