--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,8 @@
         <h2>Gallery</h2>
     </header>
     <main>
-        <p>Welcome to the gallery page!</p>
+        <h3>Welcome to the gallery page!</h3>
+
     </main>
     <footer>
         <p>2025 Kenneth Chao</p>
