more image upload

--- a/gallery.html
+++ b/gallery.html
@@ -17,8 +17,10 @@
         
         <section class="gallery">
             <img src="images/test_image.png" alt="test_image">
-            <img src="images/test_image2.png" alt="test_image2">
-            <img src="images/test_image3.png" alt="test_image3">
+            <img src="images/test_image2.jpeg" alt="test_image2">
+            <img src="images/test_image3.JPG" alt="test_image3">
+            <img src="images/test_image4.jpeg" alt="test_image4">
+            <img src="images/test_image5.JPG" alt="test_image5">
 
            
         </section>
