--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <nav>
         <ul>
-            
             <li>Home</li>
-            <li>Resume</li>
+            <li><a href="index.html">Resume</a></li> <!-- Links to the resume page -->
             <li><a href="gallery.html">Gallery</a></li> <!-- Links to the gallery page -->
             
         </ul>
