--- a/gallery.html
+++ b/gallery.html
@@ -26,14 +26,14 @@
         
         
         <section class="gallery">
-            <img src="images/test_image.png" alt="test_image" class="hidden">
-            <img src="images/test_image3.JPG" alt="test_image3" class="hidden">
-            <img src="images/test_image2.jpeg" alt="test_image2" class="hidden">
-            <img src="images/test_image4.jpeg" alt="test_image4" class="hidden">
-            <img src="images/test_image5.JPG" alt="test_image5" class="hidden">
-            <img src="images/test_image6.JPG" alt="test_image6" class="hidden">
-            <img src="images/test_image7.JPG" alt="test_image7" class="hidden">
-            <img src="images/test_image8.JPG" alt="test_image8" class="hidden">
+            <img data-src="images/test_image.png" alt="test_image" class="hidden">
+            <img data-src="images/test_image3.JPG" alt="test_image3" class="hidden">
+            <img data-src="images/test_image2.jpeg" alt="test_image2" class="hidden">
+            <img data-src="images/test_image4.jpeg" alt="test_image4" class="hidden">
+            <img data-src="images/test_image5.JPG" alt="test_image5" class="hidden">
+            <img data-src="images/test_image6.JPG" alt="test_image6" class="hidden">
+            <img data-src="images/test_image7.JPG" alt="test_image7" class="hidden">
+            <img data-src="images/test_image8.JPG" alt="test_image8" class="hidden">
             <script>
                 const images = document.querySelectorAll('.gallery img');
                 let delay = 500; // Delay in milliseconds
