--- a/gallery.html
+++ b/gallery.html
@@ -26,16 +26,25 @@
         
         
         <section class="gallery">
-            <img data-src="images/image1.jpeg" alt="test_image" class="hidden">
-            <img data-src="images/image2.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image3.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image4.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image5.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image8.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image9.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image10.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image11.JPG" alt="test_image" class="hidden">
-            <img data-src="images/image12.JPG" alt="test_image" class="hidden">
+            <img data-src="images/image1.jpeg" alt="image1" class="hidden">
+            <img data-src="images/image2.JPG" alt="image2" class="hidden">
+            <img data-src="images/image3.JPG" alt="image3" class="hidden">
+            <img data-src="images/image4.JPG" alt="image4" class="hidden">
+            <img data-src="images/image5.JPG" alt="image5" class="hidden">
+            <img data-src="images/image6.JPG" alt="image6" class="hidden">
+            <img data-src="images/image7.JPG" alt="image7" class="hidden">
+            <img data-src="images/image8.JPG" alt="image8" class="hidden">
+            <img data-src="images/image9.JPG" alt="image9" class="hidden">
+            <img data-src="images/image10.JPG" alt="image10" class="hidden">
+            <img data-src="images/image11" alt="image11" class="hidden">
+            <img data-src="images/image12.JPG" alt="image12" class="hidden">
+            <img data-src="images/image13.JPG" alt="image13" class="hidden">
+            <img data-src="images/image14.JPG" alt="image14" class="hidden">
+            <img data-src="images/image15.JPG" alt="image15" class="hidden">
+            <img data-src="images/image16.jpeg" alt="image16" class="hidden">
+            <img data-src="images/image17.jpeg" alt="image17" class="hidden">
+            <img data-src="images/image18.JPG" alt="image18" class="hidden">
+            <img data-src="images/image19.JPG" alt="image19" class="hidden">
 
 
 
