--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your CSS -->
 </head>
 <body id="">
-    <header id="gallery-header">
+    <header class="page-header">
         <h2>GALLERY</h2>
 
         
