--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
             <img data-src="images/image8.JPG" alt="image8" class="hidden">
             <img data-src="images/image9.JPG" alt="image9" class="hidden">
             <img data-src="images/image10.JPG" alt="image10" class="hidden">
-            <img data-src="images/image11" alt="image11" class="hidden">
+            <img data-src="images/image11.JPG" alt="image11" class="hidden">
             <img data-src="images/image12.JPG" alt="image12" class="hidden">
             <img data-src="images/image13.JPG" alt="image13" class="hidden">
             <img data-src="images/image14.JPG" alt="image14" class="hidden">
