--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="page-header">
-        <h2>GALLERY</h2>
+        <h2>RESUME</h2>
 
         
         <nav>
@@ -47,7 +47,7 @@
             <h2>Professional Experience</h2>
             <article>
                 <h3><strong>Merck</strong> - Elkton, VA</h3>
-                <p><strong><i>Technical Operations Intern</i></strong> (Jun 2024 - Present)</p>
+                <p><strong><i>Technical Operations Intern</i></strong> (Jun 2024 - Aug 2024)</p>
                 <ul>
                     <li>Supported biologic vaccine and small molecule manufacturing through material characterization and root cause analysis.</li>
                     <li>Conducted risk assessment for process defects on a $240 million product release.</li>
