--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenneth Chao - Resume</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css"> <!-- links html to css -->
     
 </head>
