--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 
-                <li>Home</li>
+                <li><a href="home.html">Home</a></li> <!-- Links to the home page -->
                 <li><a href="index.html">Resume</a></li> <!-- Links to the resume page -->
                 <li><a href="gallery.html">Gallery</a></li> <!-- Links to the gallery page -->
                 
