--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         <img src="images/image17.jpeg" alt="image17" class="home-image">  
         </section>
         <section class="home-section">
-            <p style="margin-top:0rem">1Humpback Rocks, VA</p>
+            <p style="margin-top:0rem">Humpback Rocks, VA</p>
         </section>
         
 
