--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
             <img data-src="images/image1.jpeg" alt="image1" class="hidden">
             <img data-src="images/image2.jpeg" alt="image2" class="hidden">
             <img data-src="images/image3.JPG" alt="image3" class="hidden">
-            <img data-src="images/image4.JPG" alt="image4" class="hidden">
+            <img data-src="images/image4.jpeg" alt="image4" class="hidden">
             <img data-src="images/image5.JPG" alt="image5" class="hidden">
             <img data-src="images/image6.JPG" alt="image6" class="hidden">
             <img data-src="images/image7.JPG" alt="image7" class="hidden">
@@ -51,10 +51,33 @@
             <img data-src="images/image18.JPG" alt="image18" class="hidden">
             <img data-src="images/image19.JPG" alt="image19" class="hidden">
             <img data-src="images/image20.JPG" alt="image20" class="hidden">
+            <img data-src="images/image21.jpeg" alt="image21" class="hidden">
+            <img data-src="images/image22.jpeg" alt="image22" class="hidden">
+            <img data-src="images/image23.jpeg" alt="image23" class="hidden">
+            <img data-src="images/image24.jpeg" alt="image24" class="hidden">
+            <img data-src="images/image25.jpeg" alt="image25" class="hidden">
+            <img data-src="images/image26.jpeg" alt="image26" class="hidden">
+            <img data-src="images/image27.jpeg" alt="image27" class="hidden">
+            <img data-src="images/image28.jpeg" alt="image28" class="hidden">
+            <img data-src="images/image29.jpeg" alt="image29" class="hidden">
+            <img data-src="images/image30.jpeg" alt="image30" class="hidden">
+            <img data-src="images/image31.jpeg" alt="image31" class="hidden">
+            <img data-src="images/image32.jpeg" alt="image32" class="hidden">
+            <img data-src="images/image33.jpeg" alt="image33" class="hidden">
+            <img data-src="images/image34.jpeg" alt="image34" class="hidden">
+            <img data-src="images/image35.jpeg" alt="image35" class="hidden">
+            <img data-src="images/image36.jpeg" alt="image36" class="hidden">
+            <img data-src="images/image37.jpeg" alt="image37" class="hidden">
+            <img data-src="images/image38.jpeg" alt="image38" class="hidden">
+            <img data-src="images/image39.jpeg" alt="image39" class="hidden">
+            <img data-src="images/image40.jpeg" alt="image40" class="hidden">
+            <img data-src="images/image41.jpeg" alt="image41" class="hidden">
+            <img data-src="images/image42.jpeg" alt="image42" class="hidden">
+            <img data-src="images/image43.jpeg" alt="image43" class="hidden">
+            <img data-src="images/image44.jpeg" alt="image44" class="hidden">
+            <img data-src="images/image45.jpeg" alt="image45" class="hidden">
 
 
-
-    
 
             
             <script>
